[package]
name = "laps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ldap3 = { version = "0.11.3", features = ["gssapi", "tls", "sync"] }
rstest = "0.19.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows-sys = { version = "0.52.0", features = ["Win32_Security", "Win32_Foundation"] }
