[package]
authors = ["Johannes Schoepp <darkdiscover@gmail.com>"]
name = "laps-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jschpp/laps-rs"
license = "MIT"
description = "Library for the retrieval of LAPS passwords"
keywords = ["ldap", "ActiveDirectory", "Windows", "client"]
categories = ["network-programming", "os::windows-apis"]
exclude = [".vscode/*", ".gitignore", "README.tpl"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
ldap3 = { version = "0.11.5", features = ["gssapi", "tls", "sync"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows-sys = { version = "0.52.0", features = [
    "Win32_Security",
    "Win32_Foundation",
] }

[dev-dependencies]
rstest = "0.21.0"
